2008-10-16  Jonathan Pryor <jpryor@novell.com>

Migration from monodoc/tools to mcs/tools/mdoc...

	* . (svn:ignore), Test (svn:ignore): Ignore generated files.
	* assembler.cs, mdoc.cs, monodocer.cs, monodocs2html.cs,
	  monodocs2slashdoc.cs, normalize.cs, validate.cs, XhtmlWriter.cs:
	  Move to Mono.Documentation.
	* defaulttemplate.xsl, overview.xsl, stylesheet.xsl: Moved to
	  Resources.
	* DocTest: Moved to Test.
	* DocTest-v1.cs, DocTest-v2.patch, TestEcmaDocs.xml: Moved to Test.
	* mdoc.exe.sources: Added; mcs include file to build mdoc.exe.
	* Makefile: Added; build mdoc.exe, monodocer1.exe, and unit tests for
	  mdoc.exe
	* Mono.Documentation/assembler.cs, Mono.Documentation/normalize.cs,
	  Mono.Documentation/mdoc.cs, Mono.Documentation/monodocs2slashdoc.cs,
	  Mono.Documentation/monodocs2html.cs, Mono.Documentation/validate.cs:
	  Modify command line handling to remove Mono.GetOptions dependency.
	* Test/DocTest-v1.cs: Update //code/@src attribute due to changed paths.
	* Test/msxdoc-expected.importslashdoc.xml,
	* Test/en.expected.importslashdoc/Mono.DocTest/DocAttribute.xml: Flush 
	  due to above DocTest-v1.cs change.

2008-10-16  Jonathan Pryor <jpryor@novell.com>

	* monodocer.cs: Fixup sorting of explicitly-implement generic members.  
	  This keeps members from "bouncing around" in random orders when
	  updating documentation...
	* DocTest-v1.cs: Explicitly implement some generic interface members on
	  MyList<A,B> to provoke the bug fixed above.
	  Dictionary<K,V>.ValueCollection in mscorlib was the original
	  example.
	* DocTest/en.expected/Mono.DocTest.Generic/MyList`2.xml,
	  DocTest/en.expected.importslashdoc/Mono.DocTest.Generic/MyList`2.xml,
	  DocTest/en.expected.since/Mono.DocTest.Generic/MyList`2.xml,
	  DocTest/html.expected/Mono.DocTest.Generic/MyList`2.html,
	  DocTest/msxdoc-expected.importslashdoc.xml: Flush.

2008-10-15  Jonathan Pryor <jpryor@novell.com>

	* monodocer.cs: Ignore some attributes, because they're ~meaningless